tests/negative/test_owning_asgn_no_drop.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc bar (f:Foo::noDrop) () {
    sym f0:Foo;
    = f0 f;
};

fnc main () () {};